// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> Snapshots With one marker should match snapshot with Slider snapped 1`] = `
.c1 {
  cursor: pointer;
  height: 24px;
  margin-top: -10px;
  outline: none;
  position: absolute;
  top: 0;
  width: 24px;
  background-color: #231B22;
  border: 6px solid #FFFFFF;
  border-radius: 9999px;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 40px;
}

.c0 * {
  box-sizing: border-box;
}

<div>
  <div
    class="yoga yoga-with-marks c0"
  >
    <div
      class="yoga-rail"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 100%; background-color: rgb(215, 215, 224);"
    />
    <div
      class="yoga-track"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 0%; background-color: rgb(35, 27, 34); left: 0%;"
    />
    <div
      class="yoga-step"
    >
      <span
        class="yoga-dot yoga-dot-active"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(35, 27, 34); left: 0%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 100%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 10%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 20%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 30%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 40%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 50%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 60%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 70%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 80%;"
      />
      <span
        class="yoga-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 90%;"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c1 yoga-handle"
      data-dragging="false"
      role="slider"
      style="left: 0%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="yoga-mark"
    />
  </div>
</div>
`;

exports[`<Slider /> Snapshots With one marker should match snapshot with Slider with labels 1`] = `
.c1 {
  cursor: pointer;
  height: 24px;
  margin-top: -10px;
  outline: none;
  position: absolute;
  top: 0;
  width: 24px;
  background-color: #231B22;
  border: 6px solid #FFFFFF;
  border-radius: 9999px;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 40px;
}

.c0 * {
  box-sizing: border-box;
}

<div>
  <div
    class="yoga yoga-with-marks c0"
  >
    <div
      class="yoga-rail"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 100%; background-color: rgb(215, 215, 224);"
    />
    <div
      class="yoga-track"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 0%; background-color: rgb(35, 27, 34); left: 0%;"
    />
    <div
      class="yoga-step"
    >
      <span
        class="yoga-dot yoga-dot-active"
        style="left: 0%;"
      />
      <span
        class="yoga-dot"
        style="left: 100%;"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c1 yoga-handle"
      data-dragging="false"
      role="slider"
      style="left: 0%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="yoga-mark"
    >
      <span
        class="yoga-mark-text yoga-mark-text-active"
        style="transform: translateX(0%); left: 0%; position: absolute; top: 15px;"
      >
        0
      </span>
      <span
        class="yoga-mark-text"
        style="transform: translateX(-100%); left: 100%; position: absolute; top: 15px;"
      >
        10
      </span>
    </div>
  </div>
</div>
`;

exports[`<Slider /> Snapshots With one marker should match snapshot with default Slider 1`] = `
.c1 {
  cursor: pointer;
  height: 24px;
  margin-top: -10px;
  outline: none;
  position: absolute;
  top: 0;
  width: 24px;
  background-color: #231B22;
  border: 6px solid #FFFFFF;
  border-radius: 9999px;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 40px;
}

.c0 * {
  box-sizing: border-box;
}

<div>
  <div
    class="yoga yoga-with-marks c0"
  >
    <div
      class="yoga-rail"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 100%; background-color: rgb(215, 215, 224);"
    />
    <div
      class="yoga-track"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 0%; background-color: rgb(35, 27, 34); left: 0%;"
    />
    <div
      class="yoga-step"
    >
      <span
        class="yoga-dot yoga-dot-active"
        style="left: 0%;"
      />
      <span
        class="yoga-dot"
        style="left: 100%;"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c1 yoga-handle"
      data-dragging="false"
      role="slider"
      style="left: 0%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="yoga-mark"
    />
  </div>
</div>
`;

exports[`<Slider /> Snapshots With two markers should match snapshot 1`] = `
.c1 {
  cursor: pointer;
  height: 24px;
  margin-top: -10px;
  outline: none;
  position: absolute;
  top: 0;
  width: 24px;
  background-color: #231B22;
  border: 6px solid #FFFFFF;
  border-radius: 9999px;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 40px;
}

.c0 * {
  box-sizing: border-box;
}

<div>
  <div
    class="rc-slider rc-slider-with-marks c0"
  >
    <div
      class="rc-slider-rail"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 100%; background-color: rgb(215, 215, 224);"
    />
    <div
      class="rc-slider-track rc-slider-track-1"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 40%; background-color: rgb(35, 27, 34); left: 30%;"
    />
    <div
      class="rc-slider-step"
    >
      <span
        class="rc-slider-dot"
        style="left: 0%;"
      />
      <span
        class="rc-slider-dot"
        style="left: 100%;"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="3"
      class="c1 rc-slider-handle rc-slider-handle-1"
      data-dragging="false"
      role="slider"
      style="left: 30%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="7"
      class="c1 rc-slider-handle rc-slider-handle-2"
      data-dragging="false"
      role="slider"
      style="left: 70%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="rc-slider-mark"
    />
  </div>
</div>
`;

exports[`<Slider /> Snapshots With two markers should match snapshot with Slider snapped 1`] = `
.c1 {
  cursor: pointer;
  height: 24px;
  margin-top: -10px;
  outline: none;
  position: absolute;
  top: 0;
  width: 24px;
  background-color: #231B22;
  border: 6px solid #FFFFFF;
  border-radius: 9999px;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 40px;
}

.c0 * {
  box-sizing: border-box;
}

<div>
  <div
    class="rc-slider rc-slider-with-marks c0"
  >
    <div
      class="rc-slider-rail"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 100%; background-color: rgb(215, 215, 224);"
    />
    <div
      class="rc-slider-track rc-slider-track-1"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 40%; background-color: rgb(35, 27, 34); left: 30%;"
    />
    <div
      class="rc-slider-step"
    >
      <span
        class="rc-slider-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 0%;"
      />
      <span
        class="rc-slider-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 100%;"
      />
      <span
        class="rc-slider-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 10%;"
      />
      <span
        class="rc-slider-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 20%;"
      />
      <span
        class="rc-slider-dot rc-slider-dot-active"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(35, 27, 34); left: 30%;"
      />
      <span
        class="rc-slider-dot rc-slider-dot-active"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(35, 27, 34); left: 40%;"
      />
      <span
        class="rc-slider-dot rc-slider-dot-active"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(35, 27, 34); left: 50%;"
      />
      <span
        class="rc-slider-dot rc-slider-dot-active"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(35, 27, 34); left: 60%;"
      />
      <span
        class="rc-slider-dot rc-slider-dot-active"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(35, 27, 34); left: 70%;"
      />
      <span
        class="rc-slider-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 80%;"
      />
      <span
        class="rc-slider-dot"
        style="border-radius: 9999px; margin-left: -4px; position: absolute; height: 10px; top: -3px; width: 10px; background-color: rgb(215, 215, 224); left: 90%;"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="3"
      class="c1 rc-slider-handle rc-slider-handle-1"
      data-dragging="false"
      role="slider"
      style="left: 30%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="7"
      class="c1 rc-slider-handle rc-slider-handle-2"
      data-dragging="false"
      role="slider"
      style="left: 70%; transform: translateX(-50%);"
      tabindex="0"
    />
    <div
      class="rc-slider-mark"
    />
  </div>
</div>
`;

exports[`<Slider /> Tooltip should render tooltips 1`] = `
.c2 {
  width: 95px;
  position: absolute;
  bottom: 30px;
  left: 6px;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background-color: #D8385E;
  border-radius: 8px;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c4 {
  position: relative;
  z-index: 3;
  background-color: #F5F5FA;
  border-radius: 8px;
  padding: 4px 8px 4px 8px;
}

.c7 {
  position: absolute;
  bottom: -5px;
  left: 50%;
  z-index: 2;
  width: 16px;
  height: 16px;
  border-radius: 3px;
  -webkit-transform: rotate(45deg) translateX(-50%);
  -ms-transform: rotate(45deg) translateX(-50%);
  transform: rotate(45deg) translateX(-50%);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  background-color: #F5F5FA;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 700;
  font-family: Rubik;
  color: #231B22;
  position: relative;
  text-align: center;
  display: block;
  padding: 4px 8px 4px 8px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  color: #FFFFFF;
  font-size: 12px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  display: block;
  text-align: center;
  color: #6B6B78;
  font-weight: 400;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  display: block;
  text-align: center;
  color: #6B6B78;
  font-weight: 400;
}

.c1 {
  cursor: pointer;
  height: 24px;
  margin-top: -10px;
  outline: none;
  position: absolute;
  top: 0;
  width: 24px;
  background-color: #231B22;
  border: 6px solid #FFFFFF;
  border-radius: 9999px;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25), 0 0 0 8px rgba(35,27,34,0.2);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 40px;
}

.c0 * {
  box-sizing: border-box;
}

<div>
  <div
    class="yoga yoga-with-marks c0"
  >
    <div
      class="yoga-rail"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 100%; background-color: rgb(215, 215, 224);"
    />
    <div
      class="yoga-track"
      style="border-radius: 9999px; height: 4px; position: absolute; width: 0%; background-color: rgb(35, 27, 34); left: 0%;"
    />
    <div
      class="yoga-step"
    >
      <span
        class="yoga-dot yoga-dot-active"
        style="left: 0%;"
      />
      <span
        class="yoga-dot"
        style="left: 100%;"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c1 yoga-handle"
      data-dragging="true"
      role="slider"
      style="left: 0%; transform: translateX(-50%);"
      tabindex="0"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          ribbon
        </span>
        <div
          class="c4"
        >
          <span
            class="c5"
          >
            title
          </span>
          <span
            class="c6"
          >
            description
          </span>
        </div>
        <div
          class="c7"
        />
      </div>
    </div>
    <div
      class="yoga-mark"
    />
  </div>
</div>
`;
